--- a/rails/my_sample_app/Gemfile
+++ b/rails/my_sample_app/Gemfile
@@ -13,7 +13,7 @@ gem 'bootstrap-sass', '2.3.2.0'
 
 gem 'bcrypt-ruby', '3.0.1'
 
-# Create semi-realistic names and email addresses
+## Create semi-realistic names and email addresses
 gem 'faker', '1.1.2'
 
 # Gem to be used for pagination
